--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,18 +1,62 @@
-.hexa_result{
+.message_section{
    display: flex;
+   justify-content: space-around;
+}
+.received_msg_area{
+   display: flex;
+   align-items: center;
    padding: 20px;
    height: 40px;
+   width: 700px;
+   margin-top: 10px;
    background-color: black;
    color: rgb(34, 248, 6);
 }
 
-.hexa_result div{
-   margin: 5px 10px;
+.showing_msg_area{
+   justify-content: space-between;
 }
 
-.translate_btn{
-   padding: 10px;
-   font-size: 20px;
+.hexa_result{
+   display: flex;
+   color: rgb(34, 248, 6);
+} 
+
+.hexa_result div{
+   margin-right: 20px;
+}
+
+.translate_area div{
+   margin-right : 20px;
+}
+
+.btn{
+   height: 30px;
    font-weight: 700;
-   margin-top: 20px;
+   background-color: rgb(0,0,0);
+}
+
+.btn_off{
+   color: rgb(138, 148, 137);
+   border: 1px solid  rgb(138, 148, 137);
+}
+
+.btn_on{
+   color: rgb(34, 248, 6);
+   border: 1px solid rgb(34, 248, 6);
+}
+
+.msg_input{
+   width : 70%;
+   border: none;
+   background-color:rgb(0,0,0);
+   color: rgb(34, 248, 6);
+   text-transform: uppercase;
+   font-size: 18px;
+
+}
+
+.msg_input::placeholder{
+   font-size: 18px;
+   padding: 5px;
 }
