--- a/public/style/style.css
+++ b/public/style/style.css
@@ -9,6 +9,12 @@ section{
    display: block;
 }
 
+h1{
+   margin-top: 50px;
+   margin-left: 100px;
+   width: 800px;
+}
+
 /* 메시지관리 */
 .message_section{
    margin-top: 200px;
@@ -17,12 +23,12 @@ section{
 .get_message{
    margin-bottom: 50px;
 }
-.received_msg_area{
+.msg_area{
    display: flex;
    align-items: center;
    padding: 20px;
    height: 40px;
-   width: 700px;
+   width: 800px;
    margin-top: 10px;
    background-color: black;
    color: rgb(34, 248, 6);
@@ -48,6 +54,7 @@ section{
 .paste_area{
    display: flex;
 }
+
 .btn{
    height: 30px;
    font-weight: 700;
@@ -58,12 +65,12 @@ section{
    outline: none;
 }
 
-.btn_off{
+.btn.off{
    color: rgb(138, 148, 137);
    border: 1px solid  rgb(138, 148, 137);
 }
 
-.btn_on{
+.btn.on{
    color: rgb(34, 248, 6);
    border: 1px solid rgb(34, 248, 6);
 }
@@ -127,7 +134,7 @@ section{
    font-size: 10px;
    font-weight: 700;
    position: relative;
-   top: 408px;
+   top: 380px;
    left: 290px;
    transform-origin: right;
    transition: all 2s;
